--- a/app/src/main/res/layout/activity_screen1.xml
+++ b/app/src/main/res/layout/activity_screen1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#DB313E"
+    android:background="@drawable/backgroup"
     android:orientation="vertical"
     android:padding="15dp"
     tools:context=".Screen1">
