--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,10 @@
             android:background="?android:attr/windowBackground"
             app:itemIconTint="@color/color_tab"
             app:itemTextColor="@color/color_tab"
+
+            app:itemTextAppearanceActive="@style/BottomNavigationView.Active"
+            app:itemTextAppearanceInactive="@style/BottomNavigationView"
+
             app:labelVisibilityMode="labeled"
             app:menu="@menu/bottom_navigation">
         </clone.vtpay.view.CustomBottomNavigation>
