--- a/app/src/main/res/layout/activity_screen1.xml
+++ b/app/src/main/res/layout/activity_screen1.xml
@@ -10,6 +10,7 @@
     tools:context=".Screen1">
 
     <LinearLayout
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
