--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -202,11 +202,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:layout_marginLeft="4dp"
-                    android:layout_marginTop="28dp"
-                    android:text="0963-843-444"
+                    android:text="Nguyễn Thanh Toàn"
                     android:textColor="#C2D5D3"
                     app:layout_constraintStart_toEndOf="@+id/imageView"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="@id/imageView"
+                    app:layout_constraintBottom_toBottomOf="@id/imageView"/>
 
                 <ImageView
                     android:layout_width="36dp"
@@ -271,47 +271,46 @@
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginLeft="32dp"
+
                     android:layout_marginTop="12dp"
                     android:text="Rút tiền"
                     android:textColor="#C2D5D3"
-                    app:layout_constraintStart_toEndOf="@+id/textView3"
+                    app:layout_constraintStart_toStartOf="@+id/imageView4"
+                    app:layout_constraintEnd_toEndOf="@+id/imageView4"
                     app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
                 <TextView
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginLeft="20dp"
+
                     android:layout_marginTop="12dp"
                     android:text="Nhận tiền"
                     android:textColor="#C2D5D3"
-                    app:layout_constraintStart_toEndOf="@+id/textView2"
+                    app:layout_constraintStart_toStartOf="@+id/imageView3"
+                    app:layout_constraintEnd_toEndOf="@+id/imageView3"
                     app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="40dp"
-                    android:layout_marginLeft="40dp"
                     android:layout_marginTop="12dp"
                     android:text="Chuyển tiền"
                     android:textColor="#C2D5D3"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/imageView2"
+                    app:layout_constraintEnd_toEndOf="@id/imageView2"
                     app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="28dp"
-                    android:layout_marginLeft="28dp"
+
                     android:layout_marginTop="12dp"
                     android:text="Liên kết thẻ"
                     android:textColor="#C2D5D3"
-                    app:layout_constraintStart_toEndOf="@+id/textView4"
+                    app:layout_constraintStart_toStartOf="@+id/imageView5"
+                    app:layout_constraintEnd_toEndOf="@+id/imageView5"
                     app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
