--- a/app/src/main/res/drawable/icon_border.xml
+++ b/app/src/main/res/drawable/icon_border.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <stroke android:width="1px" android:color="#7E7E7E" />
+    <stroke android:width="0.5px" android:color="#e1e2e6" />
     <solid android:color="@android:color/transparent"/>
     <corners android:radius="10dp"/>
 </shape>
