--- a/app/src/main/res/layout/frm_home.xml
+++ b/app/src/main/res/layout/frm_home.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:text="Nguyễn Thanh Toàn"
+            android:text="Lê Ngọc Thành"
             android:textColor="#C2D5D3"/>
         
         <ImageView
